--- a/ui/src/components/virtual-scroll/QVirtualScroll.sass
+++ b/ui/src/components/virtual-scroll/QVirtualScroll.sass
@@ -3,7 +3,7 @@
     outline: 0
 
   &__padding
-    background: linear-gradient(transparent, transparent 20%, rgba(128, 128, 128, .03) 20%, rgba(128, 128, 128, .08) 50%, rgba(128, 128, 128, .03) 80%, transparent 80%, transparent) #{"/* rtl:ignore */"}
+    background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,0) 20%, rgba(128, 128, 128, .03) 20%, rgba(128, 128, 128, .08) 50%, rgba(128, 128, 128, .03) 80%, rgba(255,255,255,0) 80%, rgba(255,255,255,0)) #{"/* rtl:ignore */"}
     background-size: 100% 50px #{"/* rtl:ignore */"}
 
     .q-table &
@@ -30,5 +30,5 @@
         flex: 0 0 auto
 
       &__padding
-        background: linear-gradient(to left, transparent, transparent 20%, rgba(128, 128, 128, .03) 20%, rgba(128, 128, 128, .08) 50%, rgba(128, 128, 128, .03) 80%, transparent 80%, transparent) #{"/* rtl:ignore */"}
+        background: linear-gradient(to left, rgba(255,255,255,0), rgba(255,255,255,0) 20%, rgba(128, 128, 128, .03) 20%, rgba(128, 128, 128, .08) 50%, rgba(128, 128, 128, .03) 80%, rgba(255,255,255,0) 80%, rgba(255,255,255,0)) #{"/* rtl:ignore */"}
         background-size: 50px 100% #{"/* rtl:ignore */"}
